Add tileserver using mod_tile, renderd

--- a/.taetime/iac/devlike/nginx.conf
+++ b/.taetime/iac/devlike/nginx.conf
@@ -18,6 +18,16 @@ http {
     allow all;
     access_log   /default.access.log  main;
 
+    location /api/maps/tiles/ {
+      proxy_pass          http://goeatlocals_client_web-mod_tile:80/api/maps/tiles/;
+      resolver            127.0.0.11;
+      proxy_redirect      off;
+      proxy_set_header    Host $host;
+      proxy_set_header    X-Real-IP $remote_addr;
+      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Host $server_name;
+    }
+
     location / {
       proxy_pass          http://goeatlocals_client_web-svelte:5000/;
       resolver            127.0.0.11;
