--- a/.taetime/iac/devlike/nginx.conf
+++ b/.taetime/iac/devlike/nginx.conf
@@ -19,7 +19,27 @@ http {
     access_log   /default.access.log  main;
 
     location /api/maps/tiles/ {
-      proxy_pass          http://goeatlocals_client_web-mod_tile:80/api/maps/tiles/;
+      # TODO: we need an approach that doesn't rely upon rewriting the path,
+      # since ELBs don't suppor that. Or maybe it doesn't matter, and that's
+      # something we handle in the python application and do a pass-through
+      # that way. That would increase latency for dynamic tiles, but it would
+      # also let us do whatever authentication we wanted for it
+      proxy_pass          http://goeatlocals_client_web-tileserver_trex:6767/openmaptiles/;
+      resolver            127.0.0.11;
+      proxy_redirect      off;
+      proxy_set_header    Host $host;
+      proxy_set_header    X-Real-IP $remote_addr;
+      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Host $server_name;
+    }
+
+    location /api/maps/ {
+      # TODO: we need an approach that doesn't rely upon rewriting the path,
+      # since ELBs don't suppor that. Or maybe it doesn't matter, and that's
+      # something we handle in the python application and do a pass-through
+      # that way. That would increase latency for dynamic tiles, but it would
+      # also let us do whatever authentication we wanted for it
+      proxy_pass          http://goeatlocals_client_web-tileserver_trex:6767/;
       resolver            127.0.0.11;
       proxy_redirect      off;
       proxy_set_header    Host $host;
