--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
     "start": "sirv public --host=0.0.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/runtime": "^7.6.3",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "^7.0.0",
-    "rollup": "^1.20.0",
+    "@rollup/plugin-babel": "^5.0.0",
+    "rollup": "^2.7.3",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "rollup-plugin-root-import": "^1.0.0",
+    "rollup-plugin-postcss": "^3.1.1",
+    "svelte": "^3.0.0",
+    "svelte-awesome": "^2.3.0",
+    "mapbox-gl": "^1.11.0"
   },
   "dependencies": {
     "sirv-cli": "^0.4.4"
