--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "goeatlocals_client_web",
+  "version": "0.0.1",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --host=0.0.0.0"
+    "dev": "PORT=5000 HOST=0.0.0.0 sapper dev --dev-port=7777",
+    "build": "sapper build --legacy",
+    "export": "sapper export --legacy",
+    "start": "node __sapper__/build",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
+    "test": "run-p --race dev cy:run"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
@@ -15,17 +19,22 @@
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-replace": "^2.2.0",
     "rollup": "^2.7.3",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-root-import": "^1.0.0",
     "rollup-plugin-postcss": "^3.1.1",
+    "npm-run-all": "^4.1.5",
+    "sapper": "^0.27.0",
     "svelte": "^3.0.0",
     "svelte-awesome": "^2.3.0",
     "mapbox-gl": "^1.11.0"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4"
+    "compression": "^1.7.1",
+    "polka": "next",
+    "sirv": "^0.4.0"
   }
 }
