--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goeatlocals_client_web",
   "version": "0.0.1",
   "scripts": {
-    "dev": "PORT=5000 HOST=0.0.0.0 sapper dev --dev-port=7777",
+    "dev": "sapper dev",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
