--- a/.taetime/iac/devlike/nginx.conf
+++ b/.taetime/iac/devlike/nginx.conf
@@ -48,6 +48,16 @@ http {
       proxy_set_header    X-Forwarded-Host $server_name;
     }
 
+    location /api/ {
+      proxy_pass          http://goeatlocals-python:8000/api/;
+      resolver            127.0.0.11;
+      proxy_redirect      off;
+      proxy_set_header    Host $host;
+      proxy_set_header    X-Real-IP $remote_addr;
+      proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header    X-Forwarded-Host $server_name;
+    }
+
     location / {
       proxy_pass          http://goeatlocals_client_web-svelte:5000/;
       resolver            127.0.0.11;
