--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
     "svelte-awesome": "^2.3.0",
-    "mapbox-gl": "^1.11.0"
+    "mapbox-gl": "^1.11.0",
+    "lru-cache": "^5.1.1"
   },
   "dependencies": {
     "compression": "^1.7.1",
