--- a/tileserver/omt_imposm3.yaml
+++ b/tileserver/omt_imposm3.yaml
@@ -1642,75 +1642,4 @@ tables:
       - ditch
     type: linestring
 tags:
-  include:
-  - int_name
-  - loc_name
-  - name
-  - name:am
-  - name:ar
-  - name:az
-  - name:be
-  - name:bg
-  - name:br
-  - name:bs
-  - name:ca
-  - name:co
-  - name:cs
-  - name:cy
-  - name:da
-  - name:de
-  - name:el
-  - name:en
-  - name:eo
-  - name:es
-  - name:et
-  - name:eu
-  - name:fi
-  - name:fr
-  - name:fy
-  - name:ga
-  - name:gd
-  - name:he
-  - name:hr
-  - name:hu
-  - name:hy
-  - name:id
-  - name:is
-  - name:it
-  - name:ja
-  - name:ja_kana
-  - name:ja_rm
-  - name:ka
-  - name:kk
-  - name:kn
-  - name:ko
-  - name:ko_rm
-  - name:ku
-  - name:la
-  - name:lb
-  - name:lt
-  - name:lv
-  - name:mk
-  - name:ml
-  - name:mt
-  - name:nl
-  - name:no
-  - name:oc
-  - name:pl
-  - name:pt
-  - name:rm
-  - name:ro
-  - name:ru
-  - name:sk
-  - name:sl
-  - name:sq
-  - name:sr
-  - name:sr-Latn
-  - name:sv
-  - name:th
-  - name:tr
-  - name:uk
-  - name:zh
-  - wikidata
-  - wikipedia
-
+  load_all: true
