--- a/package.json
+++ b/package.json
@@ -31,7 +31,14 @@
     "svelte": "^3.0.0",
     "svelte-awesome": "^2.3.0",
     "mapbox-gl": "^1.11.0",
-    "lru-cache": "^5.1.1"
+    "lru-cache": "^5.1.1",
+    "svelte-select": "^3.10.1",
+    "@fortawesome/pro-solid-svg-icons": "^5.14.0",
+    "@fortawesome/pro-regular-svg-icons": "^5.14.0",
+    "@fortawesome/pro-light-svg-icons": "^5.14.0",
+    "@fortawesome/pro-duotone-svg-icons": "^5.14.0",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30"
   },
   "dependencies": {
     "compression": "^1.7.1",
