--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-replace": "^2.2.0",
+    "@rollup/plugin-alias": "^3.1.1",
     "rollup": "^2.7.3",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
