--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@fortawesome/pro-light-svg-icons": "^5.14.0",
     "@fortawesome/pro-duotone-svg-icons": "^5.14.0",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.30"
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "email-validator": "2.0.4"
   },
   "dependencies": {
     "compression": "^1.7.1",
